@@ -86,14 +86,23 @@ $zindex-modal-background: 500;
 }
 
 .modal .close {
-  @apply w-bg-primary-200 hover:w-bg-black w-border-primary;
-  padding: 0;
   position: absolute;
-  width: 50px;
-  height: 50px;
-  top: 10px;
-  inset-inline-end: 10px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  padding: 0;
+  top: theme('spacing.3');
+  inset-inline-end: theme('spacing.3');
+  width: theme('spacing.8');
+  height: theme('spacing.8');
+  color: theme('colors.white.DEFAULT');
   z-index: 1;
+
+  &:hover {
+    background-color: theme('colors.black.DEFAULT');
+    color: theme('colors.grey.50');
+  }
 }
 
 // Where all modal content resides
@@ -101,12 +110,19 @@ $zindex-modal-background: 500;
   position: relative;
   padding-bottom: 2em;
 
-  header {
-    @apply w-bg-primary w-text-white;
+  .w-header {
+    color: theme('colors.white.DEFAULT');
+    background-color: theme('colors.primary.DEFAULT');
 
-    h1 {
-      @apply w-text-white;
+    > .row {
+      // reset inline padding added to w-header for sidebar offset
+      padding-inline-start: theme('spacing.16');
+      // ensure title can never overlap the close button
+      padding-inline-end: theme('spacing.16');
+    }
 
+    .w-header__title {
+      color: inherit;
       font-weight: 700;
       font-size: 1.125rem;
       line-height: 130%;
@@ -116,12 +132,22 @@ $zindex-modal-background: 500;
 
 @include media-breakpoint-up(sm) {
   .modal-dialog {
-    padding: 0 0 2em $menu-width;
+    margin-inline-end: theme('spacing.20');
+    margin-inline-start: theme('spacing.20');
+    padding: 0 0 2em 0;
+    width: auto;
+  }
+
+  .modal .close {
+    width: theme('spacing.12');
+    height: theme('spacing.12');
   }
 }
 
 @include media-breakpoint-up(xl) {
   .modal-dialog {
+    margin-inline-end: auto;
+    margin-inline-start: auto;
     max-width: 100em;
     padding: 0 0 2em;
   }
