@@ -131,8 +131,8 @@ These are classes for components.
 @import 'components/dropdown';
 @import 'components/dropdown.legacy';
 @import 'components/help-block';
-@import 'components/modals';
 @import 'components/button';
+@import 'components/modals';
 @import 'components/chooser';
 @import 'components/tag';
 @import 'components/listing';
