@@ -238,6 +238,7 @@ The bulk of these enhancements have been from Paarth Agarwal, who has been doing
  * Only show locale filter in choosers when i18n is enabled in settings (Matt Westcott)
  * Ensure that the live preview panel correctly clears the cache when a new page is created (Sage Abdullah)
  * Ensure that there is a larger hoverable area for add block (+) within the Drafttail editor (Steven Steinwand)
+ * Resolve multiple header styling issues for modal, alignment on small devices, outside click handling target on medium devices, close button target size and hover styles (Paarth Agarwal)
 
 
 ## Upgrade considerations
